include/amino/tf.h

/**
 * Vector dot product.
 */
AA_API double
aa_tf_vdot( const double a[AA_RESTRICT 3], const double b[AA_RESTRICT 3] );
/**
 * Vector cross product
 */
AA_API void aa_tf_cross( const double a[AA_RESTRICT 3], const double b[AA_RESTRICT 3],
                         double c[AA_RESTRICT 3] ) ;
/**
 * Sum-square-differences of two vectors
 */
double
aa_tf_vssd( const double a[AA_RESTRICT 3], const double b[AA_RESTRICT 3] );
/**
 * Norm of vector
 */
double
aa_tf_vnorm( const double a[AA_RESTRICT 3] );
/** Quaternion conjugate */
AA_API void aa_tf_qconj( const double q[AA_RESTRICT 4],
                         double r[AA_RESTRICT 4] );
/** Quaternion exponential */
AA_API void aa_tf_qexp( const double q[AA_RESTRICT 4],
                        double r[AA_RESTRICT 4] );
/** Quaternion natural log */
AA_API void aa_tf_qln( const double q[AA_RESTRICT 4],
                       double r[AA_RESTRICT 4] );
/** Quaternion inverse */
AA_API void aa_tf_qinv( const double q[AA_RESTRICT 4],
                        double r[AA_RESTRICT 4] );
/** Quaternion addition. */
AA_API void aa_tf_qadd( const double a[AA_RESTRICT 4],
                        const double b[AA_RESTRICT 4],
                        double c[AA_RESTRICT 4] );
/** Quaternion subtraction. */
AA_API void aa_tf_qsub( const double a[AA_RESTRICT 4],
                        const double b[AA_RESTRICT 4],
                        double c[AA_RESTRICT 4] );
/** Quaternion multiplication. */
AA_API void aa_tf_qmul( const double a[AA_RESTRICT 4],
                        const double b[AA_RESTRICT 4],
                        double c[AA_RESTRICT 4] );
/** Unit quaternion for angle about x axis */
AA_API void aa_tf_xangle2quat( double theta_x, double q[AA_RESTRICT 4] );
/** Unit quaternion for angle about y axis */
AA_API void aa_tf_yangle2quat( double theta_y, double q[AA_RESTRICT 4] );
/** Unit quaternion for angle about z axis */
AA_API void aa_tf_zangle2quat( double theta_z, double q[AA_RESTRICT 4] );
/// convert quaternion to rotation matrix
AA_API void aa_tf_quat2rotmat( const double quat[AA_RESTRICT 4],
                               double rotmat[AA_RESTRICT 9] );
/// convert rotation matrix to quaternion
AA_API void aa_tf_rotmat2quat( const double rotmat[AA_RESTRICT 9],
                               double quat[AA_RESTRICT 4] );
/** Angle about y axis */
AA_API void aa_tf_yangle2rotmat( double theta_y, double R[AA_RESTRICT 9] );
/** Angle about z axis */
AA_API void aa_tf_zangle2rotmat( double theta_z, double R[AA_RESTRICT 9] );
/** Extract dual quaternion translation vector */
AA_API void aa_tf_duqu_trans( const double d[AA_RESTRICT 8], double v[AA_RESTRICT 3] );
/** Convert orientation unit quaternion and translation vector to dual quaternion. */
AA_API void aa_tf_qv2duqu( const double q[AA_RESTRICT 4], const double v[AA_RESTRICT 3],
                           double d[AA_RESTRICT 8] ) ;
/** Convert dual quaternion to orientation unit quaternion and translation vector. */
AA_API void aa_tf_duqu2qv( const double d[AA_RESTRICT 8],
                           double q[AA_RESTRICT 4], double v[AA_RESTRICT 3] ) ;